{
  "currentLanguage": "en",
  "appTitle" : "Abc Notes",
  "note": "Note",
  "category": "Category",

  "notes": "Notes",
  "categories": "Categories",

  "title": "Title",
  "body": "Body",
  "date": "Created date",

  "editNote": "Edit Note",
  "addNote": "New Note",
  "noteSaved": "Note {title} saved.",
  "@noteSaved": {
    "placeholders": {
      "title": {
        "type": "String",
        "example": "GMB"
      }
    }
  },
  "errorNoteNotSave": "Error. Note not saved",

  "categoryName": "Name",
  "editCategory": "Edit Category",
  "addCategory":  "Add Category",
  "categorySaved": "Category {name} saved.",
  "@categorySaved": {
    "placeholders": {
      "name": {
        "type": "String",
        "example": "GMB"
      }
    }
  },
  "errorCategoryNotSave": "Error. Category not saved",

  "configurations": "Configurations",

  "valueRequired": "Value is required.",

  "categoryUsedInNotes": "{name} category still used by notes.",
  "@categoryUsedInNotes": {
    "placeholders": {
      "name": {
        "type": "String",
        "example": "General"
      }
    }
  },
  "selectFolder": "Select Folder to save exported notes.",
  "notesExporterIn": "Notes exported in {selectedDirectory}",
  "@notesExporterIn": {
    "placeholders": {
      "selectedDirectory": {
        "type": "String",
        "example": "/storage/sdcard"
      }
    }
  },
  "selectNotesToExport": "Select notes to export.",
  "categoryCantBeDeleted": "This category can't be deleted.",
  "search": "Search",
  "sortByTime": "Sort by Time",
  "sortByTitle": "Sort by Title",
  "sortByCategory": "Sort by Category",
  "export": "Export",
  "import": "Import",
  "settings": "Settings",
  "showLastUpdate": "Show Last update in Note lists",
  "closeNoteAfterSave": "Close note after save",
  "select_backup": "Select backup",
  "database": "Database",
  "backup": "Backup",
  "restore": "Restore",
  "database_backed_up_to" : "Database backed up to",
  "database_restored_from" : "Database restored from ",
  "could_not_get_backup_directory_path" : "Could not get backup directory path",
  "original_database_file_not_found": "Original database file not found",
  "backup_file_not_found": "Backup file not found",
  "error_restoring_database": "Error restoring database",
  "error_deleting_backup": "Error deleting backup",
  "backup_deleted" : "Backup deleted",
  "cancel": "Cancel"
}