...
      );
  }

  Widget? categoryTrailing(Selectable<dynamic> selectable){
    return _mainForm.select == true
        ? Checkbox(
            key: ValueKey('chk-category'),
            value: selectable.isSelected,
            onChanged: (bool? value) {
              selectable.isSelected = value!;
              setState(() {});
            },
          )
...
