...

  StatefulBuilder? noteTrailing(Selectable<dynamic> model) {
    return _mainForm.select == true
        ? StatefulBuilder(
            builder: (BuildContext context, StateSetter setStateInternal) {
            return Checkbox(
              key: ValueKey('chk-note'),
              value: model.isSelected,
              onChanged: (bool? value) {
                setStateInternal(() {
                  model.isSelected = value!;
                  refreshData = false;
                });
...
